<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>ChessEngine</groupId>
  <artifactId>ChessEngine</artifactId>
  <version>1.0.1</version>
  <name>ChessEngine</name>
  
  <!-- Spring Boot Parent for managing dependencies -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.4</version> <!-- Use the latest Spring Boot version if necessary -->
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  
  <properties>
  	<maven.compiler.target>21</maven.compiler.target>
  	<maven.compiler.source>21</maven.compiler.source>
  </properties>
  
  <build>
  <resources>     
      <resource>
        <directory>resources</directory>
        <includes>                      
          <include>**/*.properties</include>                    
        </includes>
      </resource>            
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  
  <!-- Dependencies Section -->
  <dependencies>
    <!-- Spring Boot Web dependency to create web applications -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
  </dependencies>
</project>